--- a/app/src/main/res/layout/fragment_test_ride.xml
+++ b/app/src/main/res/layout/fragment_test_ride.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="@drawable/bg_app"
     tools:context=".ui.service.TestRideFragment">
 
     <ImageButton
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="16dp"
-        android:src="@drawable/ic_arrow_back"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Test Ride"
+        android:textColor="@color/bottom_nav_text_color"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/btnBack"
@@ -60,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="No previous Data Found"
+        android:textColor="@color/bottom_nav_text_color"
         app:layout_constraintEnd_toEndOf="@id/ivNoData"
         app:layout_constraintStart_toStartOf="@id/ivNoData"
         app:layout_constraintTop_toBottomOf="@id/ivNoData" />
