--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -253,12 +253,21 @@
             </com.google.android.material.card.MaterialCardView>
 
             <Button
-                android:id="@+id/btnLogout"
+                android:id="@+id/btnEditProfile"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_columnSpan="2"
                 android:layout_marginTop="24dp"
+                android:text="Edit Profile"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnLogout"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
                 android:text="Logout"
                 android:textColor="#FF5252" />
 
